SERVER-39141 Handle WriteConflictException in range deleter