src/mongo/db/s/collection_range_deleter.cpp
@@ -112,7 +112,7 @@ boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
         }
     }
 
-    StatusWith<int> wrote = 0;
+    StatusWith<int> swNumDeleted = 0;
 
     auto range = boost::optional<ChunkRange>(boost::none);
     auto notification = DeleteNotification();
@@ -201,22 +201,31 @@ boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
         const auto& metadata = *scopedCollectionMetadata;
 
         try {
-            wrote = self->_doDeletion(
+            swNumDeleted = self->_doDeletion(
                 opCtx, collection, metadata->getKeyPattern(), *range, maxToDelete);
         } catch (const DBException& e) {
-            wrote = e.toStatus();
+            swNumDeleted = e.toStatus();
             warning() << e.what();
         }
     }  // drop autoColl
 
-    if (!wrote.isOK() || wrote.getValue() == 0) {
-        if (wrote.isOK()) {
+    bool continueDeleting = swNumDeleted.isOK() && swNumDeleted.getValue() > 0;
+
+    if (swNumDeleted == ErrorCodes::WriteConflict) {
+        CurOp::get(opCtx)->debug().additiveMetrics.incrementWriteConflicts(1);
+        continueDeleting = true;
+    }
+
+    // If there's an error or if there are no more documents to delete, take this branch.
+    // This branch means that we will NOT continue deleting documents from this range.
+    if (!continueDeleting) {
+        if (swNumDeleted.isOK()) {
             LOG(0) << "No documents remain to delete in " << nss << " range "
                    << redact(range->toString());
         }
 
-        // Wait for majority replication even when wrote isn't OK or == 0, because it might have
-        // been OK and/or > 0 previously, and the deletions must be persistent before notifying
+        // Wait for majority replication even when swNumDeleted isn't OK or == 0, because it might
+        // have been OK and/or > 0 previously, and the deletions must be persistent before notifying
         // clients in _pop().
 
         LOG(0) << "Waiting for majority replication of local deletions in " << nss.ns() << " range "
@@ -270,7 +279,7 @@ boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
             LOG(0) << "Finished deleting documents in " << nss.ns() << " range "
                    << redact(range->toString());
 
-            self->_pop(wrote.getStatus());
+            self->_pop(swNumDeleted.getStatus());
         }
 
         if (!self->_orphans.empty()) {
@@ -282,8 +291,7 @@ boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
     }
 
     invariant(range);
-    invariant(wrote.getStatus());
-    invariant(wrote.getValue() > 0);
+    invariant(continueDeleting);
 
     notification.abandon();
     return Date_t::now() + Milliseconds(rangeDeleterBatchDelayMS.load());
@@ -403,6 +411,11 @@ StatusWith<int> CollectionRangeDeleter::_doDeletion(OperationContext* opCtx,
     int numDeleted = 0;
     do {
         BSONObj deletedObj;
+
+        // TODO SERVER-41606: Remove this function when we refactor CollectionRangeDeleter.
+        if (_throwWriteConflictForTest)
+            throw WriteConflictException();
+
         PlanExecutor::ExecState state = exec->getNext(&deletedObj, nullptr);
 
         if (state == PlanExecutor::IS_EOF) {
